dodawanie dodatkowych dodatkowych uprawnien do roli przy dodawaniu usera